[project]
name = "Bilink"
version = "0.9.0-b4"
description = "a bot server based on bilibili api"
authors = [
    {name = "marisa", email = "1435608435@qq.com"},
]
dependencies = ["httpx>=0.28.1", "qrcode>=8.0", "pillow>=11.0.0"]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
