[project]
name = "Bilink"
version = "0.9.0-b7"
description = "a bot server based on bilibili api"
authors = [{ name = "marisa", email = "1435608435@qq.com" }]
dependencies = [
    "qrcode>=8.0",
    "openai>=1.87.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.11.0",
    "pillow>=11.3.0",
    "httpx[http2]>=0.28.1",
    "aiocron>=2.1",
]
requires-python = ">=3.9"
readme = "README.md"
license = { text = "MIT" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.basedpyright]
typeCheckingMode = "standard"

[dependency-groups]
dev = ["pyright>=1.1.409"]
